<resources>
    <string name="app_name">UpoCarSharing</string>
    <string name="name">Insert your e-mail address:</string>
    <string name="nameHint">Insert your e-mail here</string>
    <string name="password">Insert your password:</string>
    <string name="pswdHint">Insert your password here</string>
    <string name="signup">Sign-up</string>
    <string name="login">Login</string>
    <string name="error">You must insert email and password before</string>
    <string name="failed">Authentication failed</string>
    <string name="signed">Authentication ok</string>
    <string name="errorWeakPassword">Password should be at least 6 characters</string>
    <string name="errorInvalidEmail">Invalid email address</string>
    <string name="errorUserExists">The user already exists</string>
    <string name="errorWrongPassword">Wrong password</string>
    <string name="welcome">Welcome back </string>
    <string name="signing">Signing up</string>
    <string name="wait">Please wait...</string>
    <string name="errorWrongMail">Only UNIUPO student allowed</string>
    <string name="errorUser">Error</string>
    <string name="close">Close</string>
    <string name="errorUserNotExist">The user not exists</string>
    <string name="exit">Logout</string>
    <string name="add">Add new trip</string>
    <string name="show">Show the trip</string>
    <string name="delete">Delete a trip</string>
    <string name="modify">Modify a trip</string>
    <string name="addTitle">Insert info of your trip</string>
    <string name="data">Data departure</string>
    <string name="dataHint">Format: GG-MM-AAAA</string>
    <string name="time">Time departure:</string>
    <string name="timeHint">Example 09:30 (24h format)</string>
    <string name="location">Pick-up location:</string>
    <string name="locationHint">Ex. Valenza</string>
    <string name="dest">Destination:</string>
    <string name="destHint">Ex. DISIT Alessandria</string>
    <string name="seats">Seats available:</string>
    <string name="seatsHint">Free seats</string>
    <string name="passenger">See passenger list</string>
    <string name="errorInsertAllData">You must insert all data</string>
    <string name="errorAdd">Error adding trip on cloud, try later...</string>
    <string name="tripAdded">Trip successfully added</string>
    <string name="freeSeat">Free seats:</string>
    <string name="bookTrip">Book this trip</string>
    <string name="user">User:</string>
    <string name="noSeatAvaible">You cannot book a trip with 0 seat avaible!</string>
    <string name="noBooking">You cannot booking your trip!</string>
    <string name="bookAgain">You have already book this trip!</string>
    <string name="deleteTrip">Delete your booking</string>
    <string name="removed">Trip removed</string>
    <string name="notRemoved">Trip not removed</string>
    <string name="from">From:</string>
    <string name="to">to</string>
    <string name="at">at</string>
    <string name="seatError">Seat error</string>
    <string name="bookOK">Book confermed</string>
    <string name="bookNO">Book not confermed</string>
    <string name="updated">Updated</string>
    <string name="noUpdated">Not updated</string>
    <string name="notBookError">You have not book this trip!</string>
    <string name="errorPassengerList">Error getting passenger list</string>
    <string name="update">Update trip</string>
    <string name="Sure">Are you sure?</string>
    <string name="SureDesc">Atfer deleting this booking, you can\'t rebook this trip</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="connerror">Connection error</string>
</resources>
