<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/add"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_orange_light"/>

    <Button
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/show"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/delete"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_red_light"/>

    <Button
        android:id="@+id/modify"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/modify"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_blue_dark"/>


</LinearLayout>